# tatc

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  environment-dev.yml  environment.dev.yml  environment.yml  pyproject.toml  readthedocs.yaml  readthedocs.yml  requirements.txt  setup.cfg
.github/workflows/: black-check.yml  docker-build-image.yml  docker-image.yml  docker-push-image.yml  pylint.yml  unit-test.yml
app/: README.md  celeryconfig.py  main.py  requirements.txt  worker.py
app/celestrak/: router.py
app/cesium/: router.py
app/coverage/: router.py  schemas.py  tasks.py
app/generation/: router.py  schemas.py  tasks.py  utils.py
app/latency/: router.py  schemas.py  tasks.py
app/observation/: router.py  schemas.py  tasks.py
app/static/: analysis.js  design.js  index.html
app/tatc_app/: celeryconfig.py  main.py  worker.py
app/tatc_app/celery/: router.py  schemas.py
app/tatc_app/celestrak/: router.py
app/tatc_app/cesium/: router.py
app/tatc_app/coverage/: router.py  schemas.py  tasks.py
app/tatc_app/generation/: router.py  schemas.py  tasks.py  utils.py
app/tatc_app/latency/: router.py  schemas.py  tasks.py
app/tatc_app/overflight/: router.py  schemas.py  tasks.py
app/tatc_app/tests/: base.py  latency_tester.ipynb  test_celestrak.py  test_cells.py  test_cesium.py  test_coverage.py  test_ground_track.py  test_latency.py  test_orbit_track.py  test_overflight.py  test_points.py
app/tatc_app/tracking/: router.py  schemas.py  tasks.py
app/tatc_app/utils/: db.py  schemas.py  tasks.py  users.py
app/tracking/: router.py  schemas.py  tasks.py
app/utils/: database.py  db.py  dependencies.py  models.py  schemas.py  tasks.py  users.py
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/API Reference/: tatc.generation.rst
docs/Examples/: index.rst
docs/Intro/: basic_concepts.rst  index.rst
docs/api_reference/: index.rst  tatc.analysis.rst  tatc.generation.rst  tatc.utils.rst
docs/api_reference/analysis/: coverage.rst  index.rst  latency.rst  track.rst
docs/api_reference/generation/: index.rst
docs/api_reference/schemas/: ground.rst  index.rst  mission.rst  orbit.rst  space.rst
docs/api_reference/utils/: index.rst
docs/app/: index.md
docs/examples/: CollectObservations.ipynb  CollectOrbitGroundTrack.ipynb  ComputeCoverage.ipynb  ComputeDOP.ipynb  ComputeLatency.ipynb  index.rst  ro.ipynb
docs/examples_/: CollectObservations.ipynb  ComputeCoverage.ipynb  ComputeLatency.ipynb
docs/source/: tatc.rst  tatc.schemas.rst
examples/: CollectObservations.ipynb  CollectOrbitGroundTrack.ipynb  ComputeCoverage.ipynb  ComputeLatency.ipynb
examples/Collect Observations/: Web requests.ipynb
examples/Compute Coverage/: Core Functions.ipynb  Web requests.ipynb
examples/Compute Latency/: Core Functions.ipynb  Web requests.ipynb
src/tatc/: __init__.py  config.py  constants.py  utils.py
src/tatc/analysis/: __init__.py  coverage.py  dop.py  latency.py  ro_coverage.py  track.py
src/tatc/generation/: __init__.py  cells.py  points.py
src/tatc/resources/: defaults.yml
src/tatc/schemas/: __init__.py  architecture.py  instrument.py  orbit.py  point.py  satellite.py
static/: analysis.js  colormap.js  design.js  index.html  index.js  region.js
tatc/: README.md  environment.yml  pyproject.toml  setup.cfg
tatc/docs/: acknowledgements.rst  conf.py  contents.rst  environment.yml  home.rst  index.rst  tatc.analysis.rst  tatc.rst
tatc/docs/API Reference/: index.rst  tatc.analysis.rst  tatc.schemas.rst  tatc.utils.rst
tatc/docs/Intro/: installation.rst
tatc/docs/source/: modules.rst  tatc.analysis.rst  tatc.generation.rst
tatc/tatc/: __init__.py  constants.py
tatc/tatc/analysis/: calibration.py  coverage.py  latency.py  track.py
tatc/tatc/generation/: __init__.py  cells.py  points.py
tatc/tatc/schemas/: instrument.py  orbit.py
tests/: test_utils.py
tests/analysis/: test_coverage.py  test_dop.py  test_latency.py  test_track.py
tests/generation/: test_cells.py  test_points.py
tests/schemas/: test_circular_orbit.py  test_ground.py  test_instrument.py  test_keplerian_orbit.py  test_molniya_orbit.py  test_orbit_base.py  test_point.py  test_satellite.py  test_soc_constellation.py  test_sun_synchronous_orbit.py  test_tle.py  test_train_constellation.py  test_tundra_orbit.py  test_utils.py  test_walker_constellation.py
