[build-system]
requires = [
    "setuptools >= 57.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tatc"
description = "Tradespace Analysis Toolkit for Constellations (TAT-C)"
authors = [
    {name = "Paul T. Grogan", email = "paul.grogan@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = {text = "BSD License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "geopandas >= 1",
    "joblib",
    "numba",
    "numpy",
    "pandas",
    "pydantic >= 2.6",
    "pyproj",
    "shapely >= 2",
    "skyfield >= 1.48",
    "sgp4",
    "spiceypy",
    "typing-extensions",
    "pyyaml",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://tatc.readthedocs.io"
Repository = "https://github.com/code-lab-org/tatc"
Documentation = "https://tatc.readthedocs.io"
Issues = "https://github.com/code-lab-org/tatc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tatc" = ["resources/*.bsp"]

[project.optional-dependencies]
dev = [
    "black[jupyter] >= 24.2",
    "coverage",
    "pylint",
    "pylint-pydantic",
    "pytest"
]
docs = [
    "autodoc_pydantic >= 2",
    "docutils",
    "myst-nb",
    "sphinx >= 7",
    "sphinx-rtd-theme"
]
examples = [
    "ipykernel",
    "matplotlib",
    "cartopy"
]
osse = [
    "netcdf4",
    "pydap",
    "rioxarray",
    "scipy",
    "scikit-learn",
    "seaborn"
]

[tool.setuptools.dynamic]
version = {attr = "tatc.__version__"}