[metadata]
name = tatc
version = 3.1.0
author = Paul T. Grogan
author_email = pgrogan@stevens.edu
description = Tradespace Analysis Toolkit for Constellations (TAT-C)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/code-lab-org/tatc
project_urls =
    Bug Tracker = https://github.com/code-lab-org/tatc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
