[metadata]
name = tatc
version = 3.0.0
author = Paul Grogan
author_email = pgrogan@stevens.edu
description = Tradespace Analysis Tool for Constellations (TAT-C) Core
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    geopandas
    geoplot
    numpy
    pandas
    pydantic
    pyproj
    sgp4
    shapely
    skyfield
